--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -5,40 +5,49 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<div class="container">
-    e aqui
-    <div th:if="${not #lists.isEmpty(comites)}">
-        <h2>Todos losComites</h2>
-        <table class="table table-striped">
-            <tr>
-                <th>Codigo</th>
-                <th>Nombre</th>
-                <th>Responsable</th>
-                <th>Descripcion</th>
-                <th>N de acuerdo</th>
-                <th>Miembros maximos</th>
-                <th>F. desde</th>
-                <th>F. hasta</th>
-                <th>descripcion</th>
-                <th>Acciones</th>
-                
-            </tr>
-            <tr th:each="comite : ${comites}">
-                <td th:text="${comite.codigocomite}">Codigo</td>
-                <td th:text="${comite.nombrecomite}">Nombre</td>
-                <td th:text="${comite.responsablecomite}">Responsable</td>
-                <td th:text="${comite.desripcioncomite}">Descripcion</td>
-                <td th:text="${comite.numeroacuerdocomite}">Numero acuerdo</td>
-                <td th:text="${comite.miembromaximo}">Miembro maximo</td>
-                <td th:text="${comite.fechadesdecomite}">F. desde</td>
-                <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
-                
-                <td><a th:href="${'./show/' + comite.codigocomite}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>
-            </tr>
-        </table>
+<!--<div class="container">-->
+<div th:if="${not #lists.isEmpty(comites)}">
+            <div class="row">
+                <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+                <div class="col-md-9">
+                    <h3 align="center">Listado de Comites</h3>
+                    <table class="table table-striped">
+                        <tr>
+                            <th>Codigo</th>
+                            <th>Nombre</th>
+                            <th>Responsable</th>
+                            <th>Descripcion</th>
+                            <th>N de acuerdo</th>
+                            <th>Miembros maximos</th>
+                            <th>F. desde</th>
+                            <th>F. hasta</th>
+                            <th>descripcion</th>
+                            <th>Acciones</th>
+
+                        </tr>
+                        <tr th:each="comite : ${comites}">
+                            <td th:text="${comite.codigocomite}">Codigo</td>
+                            <td th:text="${comite.nombrecomite}">Nombre</td>
+                            <td th:text="${comite.responsablecomite}">Responsable</td>
+                            <td th:text="${comite.desripcioncomite}">Descripcion</td>
+                            <td th:text="${comite.numeroacuerdocomite}">Numero acuerdo</td>
+                            <td th:text="${comite.miembromaximo}">Miembro maximo</td>
+                            <td th:text="${comite.fechadesdecomite}">F. desde</td>
+                            <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
+
+                            <td><a th:href="${'./show/' + comite.codigocomite}" class="btn btn-default">Mostrar</a>
+                            <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-default">Edit</a>
+                            <a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-12">
+                    <th:block th:include="../templates/footer"></th:block>
+                </div>
+            </div>     
     </div>
-</div>
+<!--</div>-->
 </body>
 </html>
