--- a/src/main/resources/templates/fragments/puesto/puestoreporte.html
+++ b/src/main/resources/templates/fragments/puesto/puestoreporte.html
@@ -99,7 +99,7 @@
 		    });
                     
                     $('#generar').click(function(){
-            $("#fromreportpuesto").attr('action', '../pdf/'+ $("#fechacontrataciondesde").val().toString()+ $("#fechacontratacionhasta").val().toString());
+            $("#fromreportpuesto").attr('action', '../pdf/');
             $("form#fromreportpuesto").submit();
             
         });
