--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -67,9 +67,17 @@
                                           </div>
                                 </div>
             
-            <div class="row">
+<!--            <div class="row">
+                
                 <button type="submit" class="btn btn-default">Agregar</button>
+            </div>-->
+<div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+    </div>
         </form>
     </div>
 </div>
