--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -51,13 +51,13 @@
             <input type="hidden" th:field="*{codigopuesto}"/>
             <input type="hidden" th:field="*{nombrepuesto}"/>
            <div class="col-md-6">
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-5 control-label">Codigo de Puesto(*):</label>
                 <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{codigopuesto}"/>
-                    <!--<div class="boton"><a href="#">hola</a></div>-->
+                    <div class="boton"><a href="#">hola</a></div>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label class="col-sm-5 control-label">Nombre de Puesto(*):</label>
                 <div class="col-sm-7">
@@ -202,9 +202,9 @@
 
  <div class="col-md-12">
             <div class="row" align="center">
-                <button type="submit" class="btn btn-default">Regresar</button>
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/puestos/}">Regresar</a></button>
                 <button type="submit" class="btn btn-default">Guardar</button>
-                <button type="submit" class="btn btn-default">Limpiar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
                     </form>
