--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -8,10 +8,10 @@
   </head>
 <body>
 <div class="container">
-    <h2>detalle comite</h2>
+    <h2>Detalle comite</h2>
     <div>
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
-          <input type="hidden" th:field="*{codigocomite}"/>
+<!--          <input type="hidden" th:field="*{codigocomite}"/>-->
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
             
             <div class="form-group">
