--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -6,8 +6,13 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Detalle Capacitador</h2>
+<!--<div class="container">-->
+<div class="row">
+    <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+    <div class="col-md-8">
+        <h3>Detalle Capacitador</h3>
     <div>
         <form class="form-horizontal" th:object="${capacitador}" th:action="@{../capacitador}" method="post">
 <!--            <input type="hidden" th:field="*{codigocapacitador}"/>
@@ -95,12 +100,24 @@
             
             
             
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+           
+<div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+    </div>
         </form>
     </div>
+        
+    </div>
 </div>
+  <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>   
+    
+
 
 </body>
 </html>
