--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 <div class="container">
-    <h2>Datos de Usuario</h2>
+    <h2>Datos de Capacitador</h2>
         <div>
             <form class="form-horizontal">
                 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Codigo Capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.codigocapacitador}">Usuario Id</p></div>
+                        <p class="form-control-static" th:text="${capacitador.codigocapacitador}">codigo capacitador</p></div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nombre:</label>
