--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -17,7 +17,7 @@
             <h3 align="center">Consulta de Datos de Capacitaciones</h3>
             <div>
                 <form class="form-horizontal">
-                    <div class="col-md-6">
+                  
                         <div class="form-group">
                             <label class="col-sm-5 control-label">codigo:</label>
                             <div class="col-sm-7">
@@ -117,22 +117,21 @@
                                 <p class="form-control-static" th:text="${capacitacion.codigocapacitador}">Codigo de Capacitador</p>
                             </div>
                         </div>
-                    </div> 
+                 
 
 
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
-
+                         <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
+        
+    </div>
+<div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-    </div>
-
 </body>
 </html>
