--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
 
-    <title>SISADMRH</title>
-     <th:block th:include="../templates/header"></th:block>
- 
+        <title>SISADMRH</title>
+    <th:block th:include="../templates/header"></th:block>
 
-  
+
+
 </head>
 <body>
-<div class="container">
-    <h2>Datos de Capacitador</h2>
+  <div class="row">
+ <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-8">
+        <h3 align="center">Datos de Capacitador</h3>
         <div>
             <form class="form-horizontal">
-                
+
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Codigo Capacitador:</label>
                     <div class="col-sm-10">
@@ -67,23 +71,32 @@
                         <p class="form-control-static" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
                     </div>
                 </div>
-                
-                 <div class="form-group">
+
+                <div class="form-group">
                     <label class="col-sm-2 control-label">Correo Electronico:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
                     </div>
                 </div>
-<!--                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Codigo Empleado</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>
-                    </div>
-                </div>-->
-                
+                <!--                 <div class="form-group">
+                                    <label class="col-sm-2 control-label">Codigo Empleado</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>
+                                    </div>
+                                </div>-->
+              
             </form>
-    </div>
-</div>
+              <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitadores/}">Regresar</a></button>
 
+                    </div>
+                </div>
+        </div>
+    </div>
+        </div>
+<div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
+    </div>
 </body>
 </html>
