--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="container">
-    Listado de cuadros directivos
+   
     <div th:if="${not #lists.isEmpty(cuadrodirectivos)}">
-        <h2>Todos los Listados</h2>
+        <h3  align="center">Listado de Cuadro Directivos</h3>
         <table class="table table-striped">
             <tr>
                 <th>codigocuadrodirectivo</th>
