--- a/src/main/resources/templates/fragments/estado/estados.html
+++ b/src/main/resources/templates/fragments/estado/estados.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="container">
-    e aqui
+   
     <div th:if="${not #lists.isEmpty(estados)}">
-        <h2>Todos los Estados</h2>
+        <h3  align="center">Lista de Estados</h3>
         <table class="table table-striped">
             <tr>
                 <th>Codigo</th>
