--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -9,13 +9,17 @@
   
 </head>
 <body>
-<div class="container">
-    <h2>Datos de Usuario</h2>
+ <div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            
+           <h3>Datos de Usuario</h3>
         <div>
             <form class="form-horizontal">
-                
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo:</label>
+              <label class="col-sm-2 control-label">codigo:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.codigonivelnivelescolaridad}">codigo nivel escolaridad</p></div>
                 </div>
@@ -67,11 +71,24 @@
                     <div class="col-sm-10">
                        <p class="form-control-static" th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd-MMM-yyyy')}">fecha hasta</p>
                     </div>
-                </div>
+                </div>    
                 
             </form>
+                <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/nivelescolaridades/}">Regresar</a></button>
+                
+            </div>
     </div>
-</div>
+    </div> 
+        </div>
+     <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
+    </div>
+    
+    
+
 
 </body>
 </html>
