--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -7,17 +7,22 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>detalle comite</h2>
+<div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            
+          <h3 align="center">Detalle De Asistencias de Capacitacion</h3>
     <div>
         <form class="form-horizontal" th:object="${asistenciacapacitacion}" th:action="@{../asistenciacapacitacion}" method="post">
-          <input type="hidden" th:field="*{codigoasistenciacapacitacion}"/>
+<!--          <input type="hidden" th:field="*{codigoasistenciacapacitacion}"/>-->
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Horas Recibidas:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{horasrecibidas}"/>
+                    <input type="number" class="form-control" th:field="*{horasrecibidas}"/>
                 </div>
             </div>
            
@@ -29,19 +34,26 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo Capaitacion:</label>
+                <label class="col-sm-2 control-label">Codigo Capacitacion:</label>
                 <div class="col-sm-10">
                     <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
                 </div>
             </div>
             
            
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+            <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+    </div>
         </form>
     </div>
-</div>
+  
+        </div>
+    </div>
+    
 <script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
