--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -35,12 +35,12 @@
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
                             </div>
                         </div>
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-5 control-label">codigo de Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion}">Codigo de Capacitacion</p>
+                                <p class="form-control-static" th:text="${codigocapacitacion.codigocapacitacion}">Codigo de Capacitacion</p>
                             </div>
-                        </div>
+                        </div>-->
                         
                         
 
@@ -52,8 +52,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
-
+                                       <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
                     </div>
                 </div>
             </div>
