--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -7,8 +7,12 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <div class="container">
-        <h2>detalle de Capacitacion</h2>
+    <div class="row">
+         <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+           <h3>Detalle de Capacitacion</h3>
         <div>
             <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
                
@@ -125,12 +129,23 @@
                 </div>
                 
 
-                <div class="row">
-                    <button type="submit" class="btn btn-default">Agregar</button>
-                </div>
+               <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
+            </div>
+    </div>
+                
             </form>
         </div>
+      
+            
+        </div>
     </div>
+      <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>  
     <script>
         $(document).ready(function () {
             $('#fechacapacitacion').datepicker({
