--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -12,7 +12,7 @@
          <th:block th:include="../templates/menu"></th:block>
     </div> 
     <div class="col-md-8">
-        <h3>Detalle Capacitador</h3>
+        <h3 align="center">Detalle Capacitador</h3>
     <div>
         <form class="form-horizontal" th:object="${capacitador}" th:action="@{../capacitador}" method="post">
 <!--            <input type="hidden" th:field="*{codigocapacitador}"/>
@@ -76,7 +76,7 @@
              <div class="form-group">
                 <label class="col-sm-2 control-label">Carnet:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{carnetresidencia}"/>
+                    <input type="number" class="form-control" th:field="*{carnetresidencia}"/>
                 </div>
             </div>
              <div class="form-group">
@@ -103,7 +103,7 @@
            
 <div class="col-md-12">
             <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitadores/}">Regresar</a></button>
                 <button type="submit" class="btn btn-default">Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
