--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -74,7 +74,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
 
                     </div>
                 </div>
