--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -7,8 +7,14 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>detalle comite</h2>
+<div class="row">
+        
+         <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            
+          <h3 align="center">Costos de Capacitaciones</h3>
     <div>
         <form class="form-horizontal" th:object="${costocapacitacion}" th:action="@{../costocapacitacion}" method="post">
           <input type="hidden" th:field="*{codigocostocapacitacion}"/>
@@ -44,12 +50,22 @@
            
         
             
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+            <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/costocapacitaciones/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
-        </form>
     </div>
-</div>
+        </form>
+    </div>  
+        </div>
+    </div>
+    
+ <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>   
+    
 <script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
