--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -6,8 +6,12 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Detalle cuadro directivos</h2>
+     <div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            <h3>Detalle cuadro directivos</h3>
     <div>
         <form class="form-horizontal" th:object="${cuadrodirectivo}" th:action="@{../cuadrodirectivo}" method="post">
 <!--            <input type="hidden" th:field="*{codigocuadrodirectivo}"/>
@@ -50,12 +54,22 @@
                 </div>
             </div>
             
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+                      
+<div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/cuadrodirectivos/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+    </div>
         </form>
     </div>
-</div>
+            
+        </div>
+    </div>
+<!--<div class="container">-->
+    
+<!--</div>-->
 
 </body>
 <script>
