--- a/src/main/resources/templates/fragments/estado/estadoshow.html
+++ b/src/main/resources/templates/fragments/estado/estadoshow.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
 
-    <title>SISADMRH</title>
-     <th:block th:include="../templates/header"></th:block>
- 
+        <title>SISADMRH</title>
+    <th:block th:include="../templates/header"></th:block>
 
-  
+
+
 </head>
 <body>
-<div class="container">
-    <h2>Datos de estado</h2>
+    <div class="container">
+        <h3  align="center">Datos de estado</h3>
         <div>
             <form class="form-horizontal">
-                
+
                 <div class="form-group">
                     <label class="col-sm-2 control-label">codigo estado</label>
                     <div class="col-sm-10">
@@ -31,16 +31,23 @@
                         <p class="form-control-static" th:text="${estado.valorestado}">Valor de estado</p>
                     </div>
                 </div>
-              
-               <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
-            </div>
+
                
-                
-            
+
+
+
             </form>
+             <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
+
+                    </div>
+                </div>
+        </div>
     </div>
-</div>
+    <div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
+    </div>   
 
 </body>
 </html>
