--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -6,8 +6,13 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Detalle niveles de escolaridad</h2>
+<div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            
+            <h3 align="center">Detalle niveles de escolaridad</h3>
     <div>
         <form class="form-horizontal" th:object="${nivelescolaridad}" th:action="@{../nivelescolaridad}" method="post">
           
@@ -73,12 +78,21 @@
                 </div>
             </div>
             
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+            <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/nivelescolaridades/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+    </div>
         </form>
     </div>
-</div>
+  
+        </div>
+    </div>
+  <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div> 
 
 </body>
 </html>
